# LyraCodec

./: .env  .gitignore  CLAUDE.md  README.md  pyproject.toml
singer_identity/: README.md
singer_identity/models/: network_components.py
singer_identity/utils/: core.py  fetch_pretrained.py
src/: types.py
src/model/: MPD.py  MRSTFTD.py  MSD.py  ResidualUnit.py  SingerProjection.py  SnakeActivation.py  VAE.py
src/model/discriminators/: MSD.py
src/train/: config.yaml  dataset.py  train.py
src/vae/: DecoderBlock.py  EncoderBlock.py  ResidualUnit.py  SnakeActivation.py  vae.py
