[project]
name = "lyracodec"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "auraloss>=0.4.0",
    "huggingface-hub>=1.2.3",
    "librosa>=0.11.0",
    "matplotlib>=3.10.7",
    "nnaudio>=0.3.2",
    "numpy>=2.3.0",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "soundfile>=0.13.1",
    "soxr>=1.0.0",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "torchvision>=0.21.0",
    "tqdm>=4.67.1",
    "wandb>=0.23.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchaudio = { index = "pytorch-cu124" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
